--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "handlebars": "^4.7.8",
     "handlebars-loader": "^1.7.3",
     "html-webpack-plugin": "^5.6.0",
+    "ignore-loader": "^0.1.2",
     "mini-css-extract-plugin": "^2.7.7",
     "style-loader": "^3.3.4",
     "webpack": "^5.89.0",
